--- a/aal/public/angular/app/styles/main.css
+++ b/aal/public/angular/app/styles/main.css
@@ -2,6 +2,7 @@
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  -webkit-font-smoothing: subpixel-antialiased !important;
 }
 
 html, body {
